# dino-locomotion-rl

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  conftest.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_species.md
.github/workflows/: deploy.yml  python-ci.yml
configs/: quality_scoring.toml  sweep_ppo.json  sweep_sac.json
configs/brachiosaurus/: stage1_balance.toml  stage2_locomotion.toml  stage3_food_reach.toml  sweep_validation.toml
configs/trex/: stage1_balance.toml  stage2_locomotion.toml  stage3_bite.toml  sweep_validation.toml
configs/velociraptor/: stage1_balance.toml  stage2_locomotion.toml  stage3_strike.toml  sweep_validation.toml
docs/: BALANCE_REWARD_METRICS.md  CODE_CONSOLIDATION.md  CODE_REVIEW.md  MJX_CONVERSION_PLAN.md  RECOMMENDATIONS.md  REFACTORING.md  ROADMAP.md  TRAINING_REVIEW.md  WEBSITE_PLAN.md
environments/: __init__.py
environments/brachiosaurus/: README.md  __init__.py  mjx_config.py  requirements.txt
environments/brachiosaurus/assets/: brachiosaurus.xml
environments/brachiosaurus/envs/: __init__.py  brachio_env.py
environments/brachiosaurus/scripts/: test_env.py  train_sb3.py  view_model.py
environments/brachiosaurus/tests/: test_brachio_env.py  test_brachio_rewards.py  test_static_balance.py
environments/shared/: __init__.py  base_env.py  cli.py  config.py  constants.py  curriculum.py  diagnostics.py  evaluation.py  jax_curriculum.py  jax_normalization.py  jax_ppo.py  jax_training.py  metrics.py  mjx_env.py  mjx_utils.py  obs_functions.py  reporting.py  reward_functions.py  species_registry.py  test_env_base.py  train.py  train_base.py  visualization.py  wandb_integration.py
environments/shared/scripts/sweep/: __init__.py  __main__.py  constants.py  orchestration.py  ray_search_space.py  ray_tune.py  results.py  (+5 more)
environments/shared/tests/: reward_test_helpers.py  static_balance_helpers.py  test_base_env.py  test_cli.py  test_config.py  test_constants.py  test_curriculum.py  test_diagnostics.py  test_evaluation.py  test_metrics.py  test_mjx_env.py  test_obs_functions.py  test_reporting.py  test_reward_functions.py  test_species_integration.py  test_sweep.py  test_sweep_constants.py  test_sweep_orchestration.py  test_sweep_ray_search_space.py  test_sweep_reporting.py  test_sweep_results.py  test_sweep_search_space.py  test_sweep_state.py  test_sweep_submit.py  test_sweep_trial.py  test_train_base.py  test_visualization.py  test_wandb_integration.py
environments/trex/: README.md  __init__.py  mjx_config.py  requirements.txt
environments/trex/assets/: trex.xml
environments/trex/envs/: __init__.py  trex_env.py
environments/trex/scripts/: test_actuators.py  test_env.py  train_sb3.py  view_model.py
environments/trex/tests/: test_static_balance.py  test_trex_env.py  test_trex_rewards.py
environments/velociraptor/: README.md  __init__.py  mjx_config.py  requirements.txt
environments/velociraptor/assets/: raptor.xml
environments/velociraptor/envs/: __init__.py  raptor_env.py
environments/velociraptor/scripts/: test_actuators.py  test_env.py  train_sb3.py  view_model.py
environments/velociraptor/tests/: test_raptor_env.py  test_raptor_rewards.py  test_static_balance.py
notebooks/: google_drive_summary.ipynb  jax_training.ipynb  ray_tune_sweep.ipynb  training.ipynb
results/: README.md
results/trex/ppo/: collected_results.csv  summary.json
results/velociraptor/ppo/: collected_results.csv  summary.json
scripts/: setup_vertex_ai.sh
website/: docusaurus.config.ts  package.json  sidebars.ts  tsconfig.json
website/blog/: 2025-12-21-welcome.md  authors.yml
website/docs/: intro.md  privacy.md
website/docs/api/: overview.md
website/docs/getting-started/: installation.md  quick-start.md
website/docs/training/: hyperparameters.md  ppo.md  sac.md  sweeps.md  vertex-ai.md
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
website/src/theme/: Root.tsx
(+7 files in other folders)
