[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesozoic-labs"
version = "0.3.0.dev0"
description = "Robotic dinosaur locomotion environments for MuJoCo + Gymnasium"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Mesozoic Labs Contributors"}]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mujoco>=3.0.0",
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://mesozoiclabs.com"
Repository = "https://github.com/kuds/mesozoic-labs"
Documentation = "https://mesozoiclabs.com"
Issues = "https://github.com/kuds/mesozoic-labs/issues"

[project.optional-dependencies]
train = [
    "torch>=2.0.0",
    "stable-baselines3[extra]>=2.2.0",
    "wandb>=0.16.0",
    "cloudml-hypertune>=0.1.0.dev0",
]
jax = [
    "mujoco-mjx>=3.0.0",
    "jax[cuda12]>=0.4.20",
    "flax>=0.8.0",
    "optax>=0.1.7",
]
viz = [
    "mediapy>=1.1.0",
    "matplotlib>=3.7.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
]
dev = [
    "mesozoic-labs[test]",
    "mypy>=1.0",
    "ruff>=0.4.0",
    "pre-commit>=3.0",
]
all = [
    "mesozoic-labs[train,jax,viz,dev]",
]

# Gymnasium environment entry points — allows gym.make("MesozoicLabs/Raptor-v0")
[project.entry-points."gymnasium.envs.__root__"]
MesozoicLabs = "environments:__init__"

[project.entry-points."gymnasium.envs.MesozoicLabs"]
__root__ = "environments:__init__"
Raptor-v0 = "environments.velociraptor.envs.raptor_env:RaptorEnv"
Brachio-v0 = "environments.brachiosaurus.envs.brachio_env:BrachioEnv"
TRex-v0 = "environments.trex.envs.trex_env:TRexEnv"

[tool.setuptools.packages.find]
include = ["environments*"]

[tool.setuptools.package-data]
"*" = ["assets/*.xml"]

[tool.pytest.ini_options]
testpaths = [
    "environments/shared/tests",
    "environments/velociraptor/tests",
    "environments/brachiosaurus/tests",
    "environments/trex/tests",
]
norecursedirs = [
    "scripts",
    "assets",
    "notebooks",
    "website",
    ".git",
    "*.egg-info",
]
addopts = "--tb=short -q"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"environments/*/scripts/*.py" = ["E402"]
"notebooks/*.ipynb" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["environments"]

[tool.coverage.run]
source = ["environments"]
omit = [
    "*/tests/*",
    "*/scripts/*",
    # Test utility (not application code) — lives outside tests/ dir
    "environments/shared/test_env_base.py",
    # Training entry-point infrastructure (equivalent to the per-species scripts
    # that were already excluded by */scripts/*). Utility helpers in this module
    # are tested via test_train_base.py.
    "environments/shared/train_base.py",
    # JAX/MJX modules require the [jax] optional dependency which is not
    # available in the standard CI test environment.  These are tested
    # separately when JAX is installed.
    "environments/shared/mjx_env.py",
    "environments/shared/mjx_utils.py",
    "environments/shared/jax_ppo.py",
    "environments/shared/jax_training.py",
    "environments/shared/jax_normalization.py",
    "environments/shared/jax_curriculum.py",
    "environments/*/mjx_config.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
